# savings-rate-tracker

./: .gitignore  README.md  pyproject.toml
config/providers/: chip.yaml  moneybox.yaml  t212.yaml  tembo.yaml
docs/adr/: 001-rate-limiter-thread-safety.md
scripts/: run_scraper.sh
src/: __init__.py  main.py  orchestrator.py
src/analysis/: __init__.py  change_detector.py
src/exceptions/: __init__.py  scraping.py
src/models/: __init__.py  rate.py  types.py
src/scrapers/: __init__.py  base.py  chip.py  moneybox.py  t212.py  tembo.py
src/storage/: __init__.py  base.py  csv_store.py  json_store.py
src/utils/: __init__.py  browser.py  rate_limiter.py
tests/: __init__.py  conftest.py
tests/fixtures/: chip_easy_access.html  moneybox_notice_90.html  t212_interest_on_cash.html  tembo_cash_isa.html
tests/unit/: __init__.py  test_base_scraper.py  test_browser.py  test_change_detector.py  test_cli.py  test_orchestrator.py  test_rate.py  test_rate_limiter.py  test_scrapers.py  test_storage.py  test_types.py
